# advent2022

./: .gitignore  pyproject.toml
00/: main1.py
01/: main1.py  main2.py
02/: main1.py  main2.py
03/: main1.py  main2.py
04/: main1.py  main2.py
05/: main1.py  main2.py
06/: main1.py  main2.py
07/: main1.py  main2.py
08/: main1.py  main2.py
09/: main1.py  main2.py
10/: main1.py  main2.py
